--- a/app/src/main/res/layout/activity_line_chart.xml
+++ b/app/src/main/res/layout/activity_line_chart.xml
@@ -3,19 +3,30 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:PaintView="http://schemas.android.com/apk/res-auto">
 
-    <com.example.mychartview.LineChartView
-        android:id="@+id/chartview"
+    <com.example.mychartview.ChartView
+        android:id="@+id/chart"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_centerInParent="true"
-        app:bgcolor="#ffffff"
-        app:interval="50dp"
-        app:isScroll="false"
-        app:linecolor="#02bbb7"
-        app:xylinecolor="#e2e2e2"
-        app:xylinewidth="1dp"
-        app:xytextcolor="#7e7e7e"
-        app:xytextsize="12sp"/>
+        android:layout_height="200dp"
+        PaintView:column_color="#FF4246"
+        PaintView:column_color_gradient="true"
+        PaintView:column_end_color="#8BB6FF"
+        PaintView:column_start_color="#508EF9"
+        PaintView:column_text_color="@color/colorPrimary"
+        PaintView:column_width="15dp"
+        PaintView:is_chart_data_visible="false"
+        PaintView:layout_constraintLeft_toLeftOf="parent"
+        PaintView:layout_constraintRight_toRightOf="parent"
+        PaintView:layout_constraintTop_toTopOf="parent"
+        PaintView:line_chart_color="#FB6767"
+        PaintView:line_point_color="#FB6767"
+        PaintView:line_text_color="#FB6767"
+        PaintView:x_line_color="#FB6767"
+        PaintView:x_padding="30dp"
+        PaintView:x_step="40dp"
+        PaintView:x_text_color="#333333"
+        PaintView:y_padding="40dp"
+        PaintView:y_step="35dp"
+        PaintView:y_text_color="#999999" />
 </LinearLayout>
